Sat Nov 27 01:14:48 1999  Tim Janik  <timj@gtk.org>

	* acbeast.m4: check for support before adding -Wmissing-noreturn
	to the gcc option list.

Sat Nov 20 08:47:50 1999  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstsnetrouter.c (bst_snet_router_event): reset router mode
	to "Edit" after a new source has been added.

	* beast-gtk/bstparam.c (bst_param_update): took out the automatic
	GtkEntry growing if the new string is wider than the allocation.
	the entry will always grow, because stupid GtkEntry reports always
	reports a requested width >150.
	(bst_param_create): changed default note field width to 50 (from 40),
	feature free radios.

	* beast-gtk/bstsnetrouter.c (bst_snet_router_root_event): popup
	csource paramview for button3, sync on BseSource name changes.

	* beast-gtk/bstcanvassource.[hc] (bst_canvas_source_popup_view): new
	function to popup paramview.

	* configure.in: accept /proc/asound/sndstat as alternative to
	/dev/sndstat if /proc/asound/oss-devices exists.

Mon Nov 15 22:50:38 1999  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstfreeradiobutton.[hc]: new radio button type that allowes
	for free toggeling (i.e. working stand-alone, radio->group is unused).

Sun Nov 14 19:59:53 1999  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstkeytable-us.c (bst_key_table_us_101): 
	* beast-gtk/bstkeytable-de.c (bst_key_table_de_102): urg, had
	to adapt all keytable notes to the corrected BSE_KAMMER_NOTE
	octave.

Sun Nov 14 01:11:09 1999  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstmaster.c: minor changes for recording frequency,
	we still have big ISSUEs here.

Mon Nov  8 02:05:10 1999  Tim Janik  <timj@gtk.org>

	* wooho! unbelievable, using BseNoise connected to BseSNet, i just
	got the first, real (though extremely primitive) synthesis network
	running ;)
	yes! that is *something* already.

	* beast-gtk/bstsongshell.c (bst_song_shell_can_operate): 
	* beast-gtk/bstsnetshell.c (bst_snet_shell_can_operate): 