@@ -45,6 +45,7 @@ struct _BstSNetRouter
   GnomeCanvas	    parent_object;
 
   GtkWidget	   *toolbar;
+  GtkAdjustment    *adjustment;
 
   BseSNet	   *snet;
 
